# opaque-typedef

./: .travis.yml  Cargo.toml  README.md
opaque-typedef/: Cargo.toml
opaque-typedef-macros/: Cargo.toml
opaque-typedef-macros/src/: attr.rs  derive.rs  input.rs  lib.rs
opaque-typedef-macros/src/derive/: base.rs
opaque-typedef-macros/src/derive/base/: base_sized.rs  base_sized_infallible.rs  base_sized_mut.rs  base_unsized.rs  base_unsized_infallible.rs  base_unsized_infallible_mut.rs  base_unsized_mut.rs
opaque-typedef-tests/: Cargo.toml
opaque-typedef-tests/src/: lib.rs
opaque-typedef-tests/tests/: ascii_str.rs  my_str.rs  nonempty_slice.rs
opaque-typedef/src/: lib.rs
