[package]
name = "opaque-typedef"
version = "0.1.0-alpha.0"
authors = ["YOSHIOKA Takuma <lo48576@hard-wi.red>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Easy opaque typedef for Rust"
repository = "https://github.com/lo48576/opaque-typedef"
keywords = ["derive", "opaque", "strong", "typedef"]

[package.metadata.docs.rs]
all-features = true

[dependencies]

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "lo48576/opaque-typedef" }
